Remove MapTemplates from DB
