# ImperaPlus.DTO/Games/Map/MapTemplateDescriptor.cs
@@ -1,0 +1,7 @@
+﻿namespace ImperaPlus.DTO.Games.Map
+{
+    public class MapTemplateDescriptor
+    {
+        public string Name { get; set; }
+    }
+}
